--- a/EventManagementSystem/EventManagementSystem.Web/EventManagementSystem.Web.csproj
+++ b/EventManagementSystem/EventManagementSystem.Web/EventManagementSystem.Web.csproj
@@ -4625,6 +4625,7 @@
     <Content Include="Views\Authorization\UserList.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Home\PageNotFound.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
