--- a/EventManagementSystem/EventManagementSystem.Web/Web.config
+++ b/EventManagementSystem/EventManagementSystem.Web/Web.config
@@ -124,8 +124,9 @@
     <add key="ida:PostLogoutRedirectUri" value="http://localhost:8528/" />
   </appSettings>
   <system.web>
-    <customErrors mode="Off" redirectMode="ResponseRedirect">
-      <error statusCode="404" redirect="~/hata" />
+
+    <customErrors mode="On">
+      <error statusCode="404" redirect="/Home/PageNotFound"/>
     </customErrors>
     <authentication mode="Forms">
       <forms name=".EventManagementSystem" loginUrl="~/kullanici/oturum-ac" timeout="1440" slidingExpiration="true" />
