--- a/EventManagementSystem/EventManagementSystem.Web/Web.config
+++ b/EventManagementSystem/EventManagementSystem.Web/Web.config
@@ -125,9 +125,9 @@
   </appSettings>
   <system.web>
 
-    <customErrors mode="On">
+    <!--<customErrors mode="On">
       <error statusCode="404" redirect="/Home/PageNotFound"/>
-    </customErrors>
+    </customErrors>-->
     <authentication mode="Forms">
       <forms name=".EventManagementSystem" loginUrl="~/kullanici/oturum-ac" timeout="1440" slidingExpiration="true" />
     </authentication>
