--- a/EventManagementSystem/EventManagementSystem.WebApi/Web.config
+++ b/EventManagementSystem/EventManagementSystem.WebApi/Web.config
@@ -12,7 +12,7 @@
   <connectionStrings>
 
 
-    <add name="ModelContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=EMSystemDb;Integrated Security=True;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="ModelContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=mvcBaseTemplateDb;Integrated Security=True;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
 
 
   </connectionStrings>
