--- a/EventManagementSystem/EventManagementSystem.Service/EventManagementSystem.Service.csproj
+++ b/EventManagementSystem/EventManagementSystem.Service/EventManagementSystem.Service.csproj
@@ -60,6 +60,7 @@
     <Compile Include="BaseService.cs" />
     <Compile Include="FileService.cs" />
     <Compile Include="Helper\UserRoleCookie.cs" />
+    <Compile Include="Log4NetLogService.cs" />
     <Compile Include="ModuleService.cs" />
     <Compile Include="ParameterService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
