--- a/EventManagementSystem/EventManagementSystem.Web/Web.config
+++ b/EventManagementSystem/EventManagementSystem.Web/Web.config
@@ -122,6 +122,24 @@
     <add key="ida:Tenant" value="ytat.onmicrosoft.com" />
     <add key="ida:AADInstance" value="https://login.microsoftonline.com/{0}" />
     <add key="ida:PostLogoutRedirectUri" value="http://localhost:8528/" />
+
+
+    <add key="WebsiteLink" value="https://www.denme.org" />
+    <add key="NetGsmUserName" value="8503053470" />
+    <add key="NetGsmPassword" value="12991923AB" />
+    <add key="NetGsmSender" value="08503053470" />
+
+    <add key="SmsAlaApiID" value="API264392594754" />
+    <add key="SmsAlaApiPassword" value="9j44umTByN" />
+    <add key="SmsAlaApiSender" value="YBH" />
+
+
+
+    <add key="EmailSenderAddress" value="ybh@icyforum.org" />
+    <add key="EmailSenderPassword" value="YC7R6QvhF4pv!GpRZ" />
+    <add key="EmailSenderName" value="Young Business Hub" />
+    <add key="EmailSenderSmtpPort" value="587" />
+    <add key="EmailSenderSmtp" value="smtp.gmail.com" />
   </appSettings>
   <system.web>
 
