--- a/EventManagementSystem/EventManagementSystem.Helper/EventManagementSystem.Helper.csproj
+++ b/EventManagementSystem/EventManagementSystem.Helper/EventManagementSystem.Helper.csproj
@@ -59,8 +59,10 @@
     <Compile Include="EnumHelper.cs" />
     <Compile Include="FileHelper.cs" />
     <Compile Include="HttpContextHelper.cs" />
+    <Compile Include="md5Helper.cs" />
     <Compile Include="PhoneMaskHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryStringEncryption.cs" />
     <Compile Include="SizeSuffixes.cs" />
     <Compile Include="StringCipher.cs" />
     <Compile Include="StringExtensions.cs" />
