--- a/EventManagementSystem/EventManagementSystem.Web/EventManagementSystem.Web.csproj
+++ b/EventManagementSystem/EventManagementSystem.Web/EventManagementSystem.Web.csproj
@@ -3336,6 +3336,7 @@
     <Compile Include="Controllers\AuthorizationController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -3361,6 +3362,7 @@
     <Compile Include="Models\AuthorizationModel.cs" />
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Models\HomeModel.cs" />
+    <Compile Include="Models\Log4NetLogModel.cs" />
     <Compile Include="Models\LoginJsonModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -4626,6 +4628,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\PageNotFound.cshtml" />
+    <Content Include="Views\Log\List.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
