--- a/EventManagementSystem.Web/Web.config
+++ b/EventManagementSystem.Web/Web.config
@@ -135,8 +135,8 @@
 
 
 
-    <add key="EmailSenderAddress" value="ybh@icyforum.org" />
-    <add key="EmailSenderPassword" value="YC7R6QvhF4pv!GpRZ" />
+    <add key="EmailSenderAddress" value="ybh@test.org" />
+    <add key="EmailSenderPassword" value="test" />
     <add key="EmailSenderName" value="Young Business Hub" />
     <add key="EmailSenderSmtpPort" value="587" />
     <add key="EmailSenderSmtp" value="smtp.gmail.com" />
